--- a/packages/dashboard/index.html
+++ b/packages/dashboard/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dashboard</title>
+    <title>Cross-Cloud Orchestrator | Polyglot Dashboard</title>
+    <meta name="description" content="Real-time dashboard for Cross-Cloud Serverless Orchestrator. Monitor AWS, GCP, and Azure workflows with automatic failover." />
+    <meta name="keywords" content="serverless, orchestrator, aws, gcp, azure, failover, dashboard, polyglot" />
+    <meta name="theme-color" content="#2563eb" />
   </head>
   <body>
     <div id="root"></div>
