--- a/packages/dashboard/index.html
+++ b/packages/dashboard/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cross-Cloud Orchestrator | Polyglot Dashboard</title>
-    <meta name="description" content="Real-time dashboard for Cross-Cloud Serverless Orchestrator. Monitor AWS, GCP, and Azure workflows with automatic failover." />
-    <meta name="keywords" content="serverless, orchestrator, aws, gcp, azure, failover, dashboard, polyglot" />
-    <meta name="theme-color" content="#2563eb" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cross-Cloud Orchestrator | Dashboard</title>
+  <meta name="description"
+    content="Real-time dashboard for Cross-Cloud Serverless Orchestrator. Monitor AWS, GCP, and Azure workflows with automatic failover." />
+  <meta name="keywords" content="serverless, orchestrator, aws, gcp, azure, failover, dashboard, cross-cloud" />
+  <meta name="theme-color" content="#2563eb" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
